fixed alignments

--- a/css/work.css
+++ b/css/work.css
@@ -1,7 +1,7 @@
-.work__sec{
-    /* text-align: center; */
+/* .work__sec{
+    text-align: center;
 
-}
+} */
 .work__title{
     font-size: 2.5rem;
 }
